# utf-42

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  main.cpp  mainpage.dox  readme.md  test.cpp  utf42.h
.github/workflows/: static.yml
resources/: presentation.odg  repository-graph.xcf  utf42.drawio
